--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 RUN npm run build
 
 FROM nginx:latest
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist/express-gaumont /usr/share/nginx/html
